# PySteamPathProvider

./: README.md  pyproject.toml  requirements.txt  setup.py  test.py
src/: provider.py  test.py
src/steamappdata/: __init__.py
